--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -27,13 +27,13 @@
 				<label class="control-label">Mode of Transport</label>
 					<select name="mode" class="form-control" required>
 					  <option value="" selected="selected">Select</option>
-					  <option value="bicycling">Cycling</option>
-					  <option value="walking">Walking</option>
-					  <option value="driving">Car</option>
-					  <option value="truck">Light-Duty Truck</option>
-					  <option value="motorcycle">Motorcycle</option>
-					  <option value="transitrail">Transit Rail</option>
-					  <option value="bus">Bus</option>
+					  <option value="Bicycle">Bicycle</option>
+					  <option value="Walking">Walking</option>
+					  <option value="Car">Car</option>
+					  <option value="Light-Duty Truck">Light-Duty Truck</option>
+					  <option value="Motorcycle">Motorcycle</option>
+					  <option value="Transit Rail">Transit Rail</option>
+					  <option value="Bus">Bus</option>
 					</select>
 				</div>
 			<div class="col-md-6">
