--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
 <footer class="clearfix">
 	<p class="copyright">Copyright 2018</p>
-	<p class="message">Created by <span class="name">Colin Groark</span><p>
+	<p class="message">Created by <a href="https://cgroark.github.io/groark_portfolio/" target="blank"><span class="name">Colin Groark</span></a><p>
 </footer>
