--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -7,24 +7,22 @@
 	</div>
 </div>
 <div class="row form-group top-row">
-	<div class="col-md-5 col-md-offset-1">
-	<h3>Track a Trip</h3>
-	<div class="info_text"><p>Carbon Commute lets you see average carbon dioxide emissions per trip traveled based on mode of transport. Simply select transportation mode and trip origin and destination points. Save your trips to track distance and carbon footprint data.</p></div>
-	<div class="button_div"><input id="search_button" type="button" value="Start Tracking" class="btn" onclick="showForm()"></div>	
-	</div>
-	<div class="col-md-5">
+	<div class="col-md-5 col-md-offset-1 col-sm-8 col-sm-offset-2">
 		<h3>Understand Your Impact</h3>
 		<div class="info_text"><p>Burning fossil fuels produces CO<sub>2</sub>, one of the primary greenhouse gases that contribute to the "Greenhouse Effect". Data below from the Environmental Protection Agency provides a snapshot of CO<sub>2</sub> emissions per mile based on mode of transportation. </p></div>
+		<canvas id="avgChart" width="400" height="400"></canvas>
+		<p class="label_div">Kilograms of Carbon Dioxide</p>
 	</div>
-</div>
-<div class="row form-group">
-	<div class="col-md-5 col-md-offset-1">
+	<div class="col-md-5 col-md-offset-0 col-sm-8 col-sm-offset-2">
+		<h3>Track a Trip</h3>
+		<div class="info_text"><p>Carbon Commute lets you see average carbon dioxide emissions per trip traveled based on mode of transport. Simply select transportation mode and trip origin and destination points. Save your trips to track distance and carbon footprint data.</p></div>
+		<div class="button_div"><input class="search_button" type="button" value="Start Tracking" class="btn" onclick="showForm()"></div>
+		
 		<form method="post" action="/modes" class="animated fadeInUp" id="search_form">
-			<div class="form-group">
 			<p class="info_text">Select a travel mode and start and end points to track  your miles and carbon footprint</p>
 			<div class="row form-group">
 				<div class="col-md-6">
-				<label class="control-label">Mode of Transport</label>
+					<label class="control-label">Mode of Transport</label>
 					<select name="mode" class="form-control" required>
 					  <option value="" selected="selected">Select</option>
 					  <option value="Bicycle">Bicycle</option>
@@ -36,12 +34,12 @@
 					  <option value="Bus">Bus</option>
 					</select>
 				</div>
-			<div class="col-md-6">
-				<div class="form-group">
-					<label class="control-label">Commute Date</label>
-					<input id="date" name="date" type="date" class="form-control" required>
+				<div class="col-md-6">
+					<div class="form-group">
+						<label class="control-label">Commute Date</label>
+						<input id="date" name="date" type="date" class="form-control" required>
+					</div>
 				</div>
-			</div>
 			</div>
 			<h4>Starting Point</h4>
 			<div class="form-group">
@@ -61,184 +59,175 @@
 		    		</div>
 		    	</div>
 		    	<div class="col-md-6">
-			    <div class="form-group">
-			        <label class="control-label">State / Province / Region</label>
-			        <div class="controls">
-			           <select id="region" name="regStart" type="text" placeholder="state / province"
-			            class="form-control" required>
-			                <option value="" selected="selected">Select a State</option>
-							<option value="AL">Alabama</option>
-							<option value="AK">Alaska</option>
-							<option value="AZ">Arizona</option>
-							<option value="AR">Arkansas</option>
-							<option value="CA">California</option>
-							<option value="CO">Colorado</option>
-							<option value="CT">Connecticut</option>
-							<option value="DE">Delaware</option>
-							<option value="DC">District Of Columbia</option>
-							<option value="FL">Florida</option>
-							<option value="GA">Georgia</option>
-							<option value="HI">Hawaii</option>
-							<option value="ID">Idaho</option>
-							<option value="IL">Illinois</option>
-							<option value="IN">Indiana</option>
-							<option value="IA">Iowa</option>
-							<option value="KS">Kansas</option>
-							<option value="KY">Kentucky</option>
-							<option value="LA">Louisiana</option>
-							<option value="ME">Maine</option>
-							<option value="MD">Maryland</option>
-							<option value="MA">Massachusetts</option>
-							<option value="MI">Michigan</option>
-							<option value="MN">Minnesota</option>
-							<option value="MS">Mississippi</option>
-							<option value="MO">Missouri</option>
-							<option value="MT">Montana</option>
-							<option value="NE">Nebraska</option>
-							<option value="NV">Nevada</option>
-							<option value="NH">New Hampshire</option>
-							<option value="NJ">New Jersey</option>
-							<option value="NM">New Mexico</option>
-							<option value="NY">New York</option>
-							<option value="NC">North Carolina</option>
-							<option value="ND">North Dakota</option>
-							<option value="OH">Ohio</option>
-							<option value="OK">Oklahoma</option>
-							<option value="OR">Oregon</option>
-							<option value="PA">Pennsylvania</option>
-							<option value="RI">Rhode Island</option>
-							<option value="SC">South Carolina</option>
-							<option value="SD">South Dakota</option>
-							<option value="TN">Tennessee</option>
-							<option value="TX">Texas</option>
-							<option value="UT">Utah</option>
-							<option value="VT">Vermont</option>
-							<option value="VA">Virginia</option>
-							<option value="WA">Washington</option>
-							<option value="WV">West Virginia</option>
-							<option value="WI">Wisconsin</option>
-							<option value="WY">Wyoming</option>
-							<option value="AB">Alberta</option>
-							<option value="BC">British Columbia</option>
-							<option value="MB">Manitoba</option>
-							<option value="NB">New Brunswick</option>
-							<option value="NL">Newfoundland and Labrador</option>
-							<option value="NT">Northwest Territories</option>
-							<option value="NU">Nunavut</option>
-							<option value="ON">Ontario</option>
-							<option value="PE">Prince Edward Island</option>
-							<option value="QC">Quebec</option>
-							<option value="SK">Saskatchewan</option>
-							<option value="SK">Saskatchewan</option>
-						</select>
-			        </div>
-			    </div>
+				    <div class="form-group">
+				        <label class="control-label">State / Province / Region</label>
+				        <div class="controls">
+				           <select id="region" name="regStart" type="text" placeholder="state / province"
+				            class="form-control" required>
+				                <option value="" selected="selected">Select a State</option>
+								<option value="AL">Alabama</option>
+								<option value="AK">Alaska</option>
+								<option value="AZ">Arizona</option>
+								<option value="AR">Arkansas</option>
+								<option value="CA">California</option>
+								<option value="CO">Colorado</option>
+								<option value="CT">Connecticut</option>
+								<option value="DE">Delaware</option>
+								<option value="DC">District Of Columbia</option>
+								<option value="FL">Florida</option>
+								<option value="GA">Georgia</option>
+								<option value="HI">Hawaii</option>
+								<option value="ID">Idaho</option>
+								<option value="IL">Illinois</option>
+								<option value="IN">Indiana</option>
+								<option value="IA">Iowa</option>
+								<option value="KS">Kansas</option>
+								<option value="KY">Kentucky</option>
+								<option value="LA">Louisiana</option>
+								<option value="ME">Maine</option>
+								<option value="MD">Maryland</option>
+								<option value="MA">Massachusetts</option>
+								<option value="MI">Michigan</option>
+								<option value="MN">Minnesota</option>
+								<option value="MS">Mississippi</option>
+								<option value="MO">Missouri</option>
+								<option value="MT">Montana</option>
+								<option value="NE">Nebraska</option>
+								<option value="NV">Nevada</option>
+								<option value="NH">New Hampshire</option>
+								<option value="NJ">New Jersey</option>
+								<option value="NM">New Mexico</option>
+								<option value="NY">New York</option>
+								<option value="NC">North Carolina</option>
+								<option value="ND">North Dakota</option>
+								<option value="OH">Ohio</option>
+								<option value="OK">Oklahoma</option>
+								<option value="OR">Oregon</option>
+								<option value="PA">Pennsylvania</option>
+								<option value="RI">Rhode Island</option>
+								<option value="SC">South Carolina</option>
+								<option value="SD">South Dakota</option>
+								<option value="TN">Tennessee</option>
+								<option value="TX">Texas</option>
+								<option value="UT">Utah</option>
+								<option value="VT">Vermont</option>
+								<option value="VA">Virginia</option>
+								<option value="WA">Washington</option>
+								<option value="WV">West Virginia</option>
+								<option value="WI">Wisconsin</option>
+								<option value="WY">Wyoming</option>
+								<option value="AB">Alberta</option>
+								<option value="BC">British Columbia</option>
+								<option value="MB">Manitoba</option>
+								<option value="NB">New Brunswick</option>
+								<option value="NL">Newfoundland and Labrador</option>
+								<option value="NT">Northwest Territories</option>
+								<option value="NU">Nunavut</option>
+								<option value="ON">Ontario</option>
+								<option value="PE">Prince Edward Island</option>
+								<option value="QC">Quebec</option>
+								<option value="SK">Saskatchewan</option>
+								<option value="SK">Saskatchewan</option>
+							</select>
+				        </div>
+				    </div>
 				</div>
 			</div>
-		    <h4>Destination</h4>
-			<div class="form-group">
-		        <label class="control-label">Street Address</label>
-		        <div class="controls">
-		            <input id="address-line1" name="addEnd" type="text" placeholder="address line 1"
-		            class="form-control" required>
-		        </div>
-		    </div>
-		   	<div class="row form-group">
-			   	<div class="col-md-6">
-			    <div class="form-group">
-			        <label class="control-label">City / Town</label>
+		    	<h4>Destination</h4>
+				<div class="form-group">
+			        <label class="control-label">Street Address</label>
 			        <div class="controls">
-			            <input id="city" name="cityEnd" type="text" placeholder="city" class="form-control" required>
+			            <input id="address-line1" name="addEnd" type="text" placeholder="address line 1"
+			            class="form-control" required>
 			        </div>
 			    </div>
+		   	<div class="row form-group">
+			   	<div class="col-md-6">
+				    <div class="form-group">
+				        <label class="control-label">City / Town</label>
+				        <div class="controls">
+				            <input id="city" name="cityEnd" type="text" placeholder="city" class="form-control" required>
+				        </div>
+				    </div>
+				</div>
+				<div class="col-md-6">
+		   			<div class="form-group">
+		        	<label class="control-label">State / Province / Region</label>
+				        <div class="controls">
+				           <select id="region" name="regEnd" type="text" placeholder="state / province"
+				            class="form-control" required>
+				                <option value="" selected="selected">Select a State</option>
+								<option value="AL">Alabama</option>
+								<option value="AK">Alaska</option>
+								<option value="AZ">Arizona</option>
+								<option value="AR">Arkansas</option>
+								<option value="CA">California</option>
+								<option value="CO">Colorado</option>
+								<option value="CT">Connecticut</option>
+								<option value="DE">Delaware</option>
+								<option value="DC">District Of Columbia</option>
+								<option value="FL">Florida</option>
+								<option value="GA">Georgia</option>
+								<option value="HI">Hawaii</option>
+								<option value="ID">Idaho</option>
+								<option value="IL">Illinois</option>
+								<option value="IN">Indiana</option>
+								<option value="IA">Iowa</option>
+								<option value="KS">Kansas</option>
+								<option value="KY">Kentucky</option>
+								<option value="LA">Louisiana</option>
+								<option value="ME">Maine</option>
+								<option value="MD">Maryland</option>
+								<option value="MA">Massachusetts</option>
+								<option value="MI">Michigan</option>
+								<option value="MN">Minnesota</option>
+								<option value="MS">Mississippi</option>
+								<option value="MO">Missouri</option>
+								<option value="MT">Montana</option>
+								<option value="NE">Nebraska</option>
+								<option value="NV">Nevada</option>
+								<option value="NH">New Hampshire</option>
+								<option value="NJ">New Jersey</option>
+								<option value="NM">New Mexico</option>
+								<option value="NY">New York</option>
+								<option value="NC">North Carolina</option>
+								<option value="ND">North Dakota</option>
+								<option value="OH">Ohio</option>
+								<option value="OK">Oklahoma</option>
+								<option value="OR">Oregon</option>
+								<option value="PA">Pennsylvania</option>
+								<option value="RI">Rhode Island</option>
+								<option value="SC">South Carolina</option>
+								<option value="SD">South Dakota</option>
+								<option value="TN">Tennessee</option>
+								<option value="TX">Texas</option>
+								<option value="UT">Utah</option>
+								<option value="VT">Vermont</option>
+								<option value="VA">Virginia</option>
+								<option value="WA">Washington</option>
+								<option value="WV">West Virginia</option>
+								<option value="WI">Wisconsin</option>
+								<option value="WY">Wyoming</option>
+								<option value="AB">Alberta</option>
+								<option value="BC">British Columbia</option>
+								<option value="MB">Manitoba</option>
+								<option value="NB">New Brunswick</option>
+								<option value="NL">Newfoundland and Labrador</option>
+								<option value="NT">Northwest Territories</option>
+								<option value="NU">Nunavut</option>
+								<option value="ON">Ontario</option>
+								<option value="PE">Prince Edward Island</option>
+								<option value="QC">Quebec</option>
+								<option value="SK">Saskatchewan</option>
+								<option value="SK">Saskatchewan</option>
+							</select>
+				        </div>
+			    	</div>
+				</div>
 			</div>
-			<div class="col-md-6">
-		    <div class="form-group">
-		        <label class="control-label">State / Province / Region</label>
-		        <div class="controls">
-		           <select id="region" name="regEnd" type="text" placeholder="state / province"
-		            class="form-control" required>
-		                <option value="" selected="selected">Select a State</option>
-						<option value="AL">Alabama</option>
-						<option value="AK">Alaska</option>
-						<option value="AZ">Arizona</option>
-						<option value="AR">Arkansas</option>
-						<option value="CA">California</option>
-						<option value="CO">Colorado</option>
-						<option value="CT">Connecticut</option>
-						<option value="DE">Delaware</option>
-						<option value="DC">District Of Columbia</option>
-						<option value="FL">Florida</option>
-						<option value="GA">Georgia</option>
-						<option value="HI">Hawaii</option>
-						<option value="ID">Idaho</option>
-						<option value="IL">Illinois</option>
-						<option value="IN">Indiana</option>
-						<option value="IA">Iowa</option>
-						<option value="KS">Kansas</option>
-						<option value="KY">Kentucky</option>
-						<option value="LA">Louisiana</option>
-						<option value="ME">Maine</option>
-						<option value="MD">Maryland</option>
-						<option value="MA">Massachusetts</option>
-						<option value="MI">Michigan</option>
-						<option value="MN">Minnesota</option>
-						<option value="MS">Mississippi</option>
-						<option value="MO">Missouri</option>
-						<option value="MT">Montana</option>
-						<option value="NE">Nebraska</option>
-						<option value="NV">Nevada</option>
-						<option value="NH">New Hampshire</option>
-						<option value="NJ">New Jersey</option>
-						<option value="NM">New Mexico</option>
-						<option value="NY">New York</option>
-						<option value="NC">North Carolina</option>
-						<option value="ND">North Dakota</option>
-						<option value="OH">Ohio</option>
-						<option value="OK">Oklahoma</option>
-						<option value="OR">Oregon</option>
-						<option value="PA">Pennsylvania</option>
-						<option value="RI">Rhode Island</option>
-						<option value="SC">South Carolina</option>
-						<option value="SD">South Dakota</option>
-						<option value="TN">Tennessee</option>
-						<option value="TX">Texas</option>
-						<option value="UT">Utah</option>
-						<option value="VT">Vermont</option>
-						<option value="VA">Virginia</option>
-						<option value="WA">Washington</option>
-						<option value="WV">West Virginia</option>
-						<option value="WI">Wisconsin</option>
-						<option value="WY">Wyoming</option>
-						<option value="AB">Alberta</option>
-						<option value="BC">British Columbia</option>
-						<option value="MB">Manitoba</option>
-						<option value="NB">New Brunswick</option>
-						<option value="NL">Newfoundland and Labrador</option>
-						<option value="NT">Northwest Territories</option>
-						<option value="NU">Nunavut</option>
-						<option value="ON">Ontario</option>
-						<option value="PE">Prince Edward Island</option>
-						<option value="QC">Quebec</option>
-						<option value="SK">Saskatchewan</option>
-						<option value="SK">Saskatchewan</option>
-					</select>
-		        </div>
-		    </div>
-			</div>
-		</div>
 			<div class="button_div"><input id="submit_button" type="submit" value="Submit" class="btn"></div>
-		</form>
+		</form>	
 	</div>
-</div>
-<div class="col-md-5">
-	<canvas id="avgChart" width="400" height="400"></canvas>
-	<p class="label_div">Kilograms of Carbon Dioxide</p>
-</div>
-</div>
-
-<div id="search_result">
-
 </div>
 
 <script src="js/average_chart.js"></script>
