--- a/views/trips.ejs
+++ b/views/trips.ejs
@@ -5,16 +5,15 @@
 		</div>
 	</div>
 </div>
-
 <% if(user.modes.length <= 0) {%>
 	<h2> You haven't added any trips yet</h2>
 <%}%>
 
 <div class="row form-group top-row">
-	<div class="col-lg-5 col-lg-offset-1">
+	<div class="col-md-5 col-md-offset-1 col-sm-8 col-sm-offset-2">
 			<div class="trips_header"><h3>Your Trips by Distance (miles)</h3></div>		
-		<canvas id="dough_chart"></canvas></div>
-	<div class="col-lg-5">
+			<canvas id="dough_chart"></canvas></div>
+	<div class="col-md-5 col-md-offset-0 col-sm-8 col-sm-offset-2">
 	<div class="trips_header"><h3>Saved Trip Data</h3></div>		
 	<div class="table_class">
 	<table class="table">
@@ -28,6 +27,7 @@
 			</tr>
 		</thead>
 		<tbody>
+			<%console.log("moooooodeobject data#####",user.modes)%>
 			<%user.modes.map(function(trip) {%>
 			<tr>
 				<td><%=trip.date%></td>
@@ -44,7 +44,7 @@
 	</div>
 </div>
 <div class="row form-group">
-	<div class="col-lg-8 col-lg-offset-2">
+	<div class="col-md-8 col-lg-offset-2 col-sm-8 col-sm-offset-2">
 	<div class="trips_header"><h3>Carbon Footprint Comparison</h3></div>		
 	<div class="area_text"><p>Compare your actual total carbon emissions for saved trips with emissions for other modes. Emissions for other transport modes based on EPA emissions data and total logged miles.</p></div>  
 	<canvas id="area_chart"></canvas></div>
