sample login created

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -6,11 +6,11 @@
 		<div class="col-md-6 auth_format">
 			<form method="post" action="/auth/login">
 				<div class="form-group">
-					<label class="signin-form">Email:</label>
+					<label class="signin-form">Email: (test login: user@sample.com)</label>
 					<input type="text" name="email" class="form-control auth-input" placeholder="Your email">
 				</div>
 				<div class="form-group">
-					<label class="signin-form">Password:</label>
+					<label class="signin-form">Password: (test password: sample)</label>
 					<input type="password" name="password" class="form-control auth-input" placeholder="Your password">
 				</div>
 				<input type="submit" value="Sign In" class="auth_submit">
