--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,7 +1,7 @@
 <div class="background">
 	<div class="row form-group">
 		<div class="col-md-12">
-			<h2>Create an Account</h2>
+			<h2 class="login_header">Create an Account</h2>
 		</div>
 	</div>
 	<div class="row form-group">
@@ -31,7 +31,7 @@
 				<label class="signin-form">Password Verification</label>
 				<input type="password" name="passwordVerify" class="form-control auth-input" placeholder="Let's check that password">
 			</div>
-			<input type="submit" value="Sign Up" class="auth_submit">
+			<div class="button_div"><input type="submit" value="Sign Up" class="auth_submit"></div>
 		</form>
 	</div>
 </div>
