--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -2,7 +2,7 @@
 	<div class="text-center row form-group">
 		<div class="col-md-12">
 			<h1>Carbon Commute</h1>
-			<h3>Track Your Trips. See Your Carbon Footprint</h3>
+			<h2>Track Your Trips. See Your Carbon Footprint.</h2>
 		</div>
 	</div>
 </div>
