--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,6 +1,6 @@
 <div class="background">
 	<div class="row form-group">
-		<h2>Login To Your Account</h2>
+		<h2 class="login_header">Login To Your Account</h2>
 		<div class="col-md-3">
 		</div>
 		<div class="col-md-6 auth_format">
@@ -13,7 +13,7 @@
 					<label class="signin-form">Password: (test password: sample)</label>
 					<input type="password" name="password" class="form-control auth-input" placeholder="Your password">
 				</div>
-				<input type="submit" value="Sign In" class="auth_submit">
+				<div class="button_div"><input type="submit" value="Sign In" class="auth_submit"></div>
 			</form>
 		</div>
 		<div class="col-md-3">
