--- a/views/trips.ejs
+++ b/views/trips.ejs
@@ -12,7 +12,9 @@
 <div class="row form-group top-row">
 	<div class="col-md-5 col-md-offset-1 col-sm-8 col-sm-offset-2">
 			<div class="trips_header"><h3>Your Trips by Distance (miles)</h3></div>		
-			<canvas id="dough_chart"></canvas></div>
+				<canvas id="dough_chart"></canvas>
+				<hr>
+			</div>
 	<div class="col-md-5 col-md-offset-0 col-sm-8 col-sm-offset-2">
 	<div class="trips_header"><h3>Saved Trip Data</h3></div>		
 	<div class="table_class">
@@ -43,10 +45,10 @@
 	<hr>
 	</div>
 </div>
-<div class="row form-group">
+<div class="row form-group second-row">
 	<div class="col-md-8 col-lg-offset-2 col-sm-8 col-sm-offset-2">
 	<div class="trips_header"><h3>Carbon Footprint Comparison</h3></div>		
-	<div class="area_text"><p>Compare your actual total carbon emissions for saved trips with emissions for other modes. Emissions for other transport modes based on EPA emissions data and total logged miles.</p></div>  
+	<div class="area_text"><p id="compare_text">Compare your actual total carbon emissions for saved trips with emissions for other modes. Emissions for other transport modes based on EPA emissions data and total logged miles.</p></div>  
 	<canvas id="area_chart"></canvas></div>
 </div>
 
